crates/harness-testkit/tests/snapshots/pty_e2e__pty_replay_help_tab.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&help_screen,\n&[\"Keyboard Shortcuts:\", \"Replay surfaces:\", \"Open Diff surface\",\n\"Reload session\", \"Quit\",], &help_visual,)"
---
Keyboard Shortcuts:: true
Replay surfaces:: true
Open Diff surface: true
Reload session: true
Quit: true
focus_marker: Keyboard Shortcuts:
focus_pixels_blake3: ce11c63a864c159312c8c62ea4918655aaffc92da938d1133a0c8544b9466f7b
focus_region_cells: row=7, col=3, height=12, width=26
image: pty_replay_help_tab.png
size_px: 2560x1440
