crates/harness-testkit/tests/snapshots/pty_e2e__pty_replay_read_only.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&replay_screen,\n&[REPLAY_READY_MARKER, \"run_replay_safe\", REPLAY_DENSE_READY_MARKER,\n\"Replay is read-only\"], &replay_visual,)"
---
q quit: true
run_replay_safe: true
Replay · read-only: true
Replay is read-only: true
focus_marker: q quit
focus_pixels_blake3: 2fd3d4839eb79edea7697a7106bc300ac34e87998498f70ab027e41410fb27f6
focus_region_cells: row=44, col=45, height=2, width=20
image: pty_replay_read_only.png
manifest_json: pty-manifests/replay/manifest.json
manifest_jsonl: pty-manifests/replay/manifest.jsonl
size_px: 2560x1440
