crates/harness-testkit/tests/snapshots/pty_e2e__pty_session_shell_primary_replay.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&replay_screen,\n&[REPLAY_DENSE_READY_MARKER, \"shell parity task\", LIVE_OPERATOR_TODOS_MARKER,\nLIVE_OPERATOR_EMPTY_MARKER, \"Replay is read-only.\",], &replay_visual,)"
---
Replay · read-only: true
shell parity task: true
0 active todos: true
Context: true
Replay is read-only.: true
focus_marker: Replay · read-only
focus_render_state_blake3: cc7f8b9e99a4e88f8e37982b9a4649c4484304efb1a0b89c1c56369f7c1920fd
focus_region_cells: row=0, col=0, height=2, width=20
image: pty_session_shell_primary_replay.png
manifest_json: pty-manifests/replay_shell/manifest.json
manifest_jsonl: pty-manifests/replay_shell/manifest.jsonl
size_px: 2560x1440
