crates/harness-testkit/tests/snapshots/pty_e2e__pty_session_transcript_rich_shell.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&screen,\n&[\"Restyle the transcript shell\", \"Drafting a document-like plan\",\n\"tool fs.read (succeeded) · 24 lines read from src/ui.rs\",\n\"Found the transcript renderer and the composer chrome.\",], &visual,)"
---
Restyle the transcript shell: true
Drafting a document-like plan: true
tool fs.read (succeeded) · 24 lines read from src/ui.rs: true
Found the transcript renderer and the composer chrome.: true
focus_marker: Thinking:
focus_pixels_blake3: 0883b0a6b6ea29aebb2f58fd33c2c48e92691b086854b6cd7c875767859a0d78
focus_region_cells: row=0, col=0, height=48, width=160
image: pty_session_transcript_rich_shell.png
manifest_json: pty-manifests/transcript_shell/manifest.json
manifest_jsonl: pty-manifests/transcript_shell/manifest.jsonl
size_px: 2560x1440
