crates/harness-testkit/tests/snapshots/pty_e2e__pty_startup_command_palette.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&palette_screen,\n&[STARTUP_COMMAND_PALETTE_MARKER, \"New session\",\nSTARTUP_CONTINUE_HISTORY_MARKER, STARTUP_REPLAY_HISTORY_MARKER,],\n&palette_visual,)"
---
Command palette: true
New session: true
Continue session: true
Replay session: true
focus_marker: Command palette
focus_render_state_blake3: 74122a69318e242645447734ab0e5d3cc1e5741d13806c941846556ec7e73fd5
focus_region_cells: row=20, col=47, height=5, width=28
image: pty_startup_command_palette.png
manifest_json: pty-manifests/startup_command_palette/manifest.json
manifest_jsonl: pty-manifests/startup_command_palette/manifest.jsonl
size_px: 2560x1440
