crates/harness-testkit/tests/snapshots/pty_e2e__pty_startup_continue_history.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&history_screen,\n&[STARTUP_CONTINUE_HISTORY_MARKER, STARTUP_CONTINUE_HISTORY_READY_MARKER,\n\"Interactive histories\",], &history_visual,)"
---
Continue session: true
continue ready: true
Interactive histories: true
focus_marker: continue ready
focus_render_state_blake3: 47160956bfb9d52dd7b89bf28297834ba6796b03f503e34303e5722995634c64
focus_region_cells: row=26, col=63, height=3, width=28
image: pty_startup_continue_history.png
manifest_json: pty-manifests/startup_session_history/manifest.json
manifest_jsonl: pty-manifests/startup_session_history/manifest.jsonl
size_px: 2560x1440
