crates/harness-testkit/tests/snapshots/pty_e2e__pty_startup_home_dense.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
expression: "checkpoint_visual_snapshot(&screen,\n&[STARTUP_HOME_ASCII_WORDMARK_MARKER, STARTUP_HOME_SHORTCUT_MARKER,\nSTARTUP_HOME_DENSE_VALUE_PROP_MARKER,], &visual,)"
---
Harness: true
Ctrl+p open: true
open a fresh session in this directory: true
focus_marker: Harness
focus_pixels_blake3: 1629d4d86eee3d5c4f764086030fe8f9d1aae761e498d382bfe81160f1ea5b7b
focus_region_cells: row=13, col=8, height=5, width=24
image: pty_startup_home_dense.png
manifest_json: pty-manifests/startup_shell/manifest.json
manifest_jsonl: pty-manifests/startup_shell/manifest.jsonl
size_px: 960x540
