crates/harness-testkit/tests/snapshots/pty_e2e__pty_startup_launcher_ready.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
assertion_line: 794
expression: "checkpoint_visual_snapshot(&screen_contents(&harness.parser),\nSTARTUP_LIFECYCLE_MARKERS, &startup_visual)"
---
startup launcher ready: true
Dispatch a new run: true
New session: true
Continue session: true
Replay session: true
focus_marker: startup launcher ready
focus_pixels_blake3: b5534ea1bc6e5b7d2b2cbe5a4b66ecf6109d476f31b1cff0a7e4f2be081ba3a4
focus_region_cells: row=43, col=11, height=2, width=40
image: pty_startup_launcher_ready.png
size_px: 2560x1440
