crates/harness-testkit/tests/snapshots/pty_e2e__pty_startup_quarter_tile.snap
---
source: crates/harness-testkit/tests/pty_e2e.rs
assertion_line: 972
expression: "checkpoint_visual_snapshot(&startup_screen, STARTUP_LIFECYCLE_MARKERS,\n&startup_visual,)"
---
startup launcher ready: true
Dispatch a new run: true
New session: true
Continue session: true
Replay session: true
focus_marker: startup launcher ready
focus_pixels_blake3: 27a019fae9815250770438b358c9dd060809a3d1916b89ce16f44e917efdc1b9
focus_region_cells: row=19, col=10, height=2, width=40
image: pty_startup_quarter_tile.png
size_px: 1280x720
